--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -78,6 +78,7 @@
                                         <a href="{% url 'login' %}?next={{ request.path }}">Войти</a>
                                         <a href="{% url 'sign_up' %}?next={{ request.path }}">Зарегистрироваться</a>
                                     {% else %}
+                                        <p class="username">{{request.user}}</p>
                                         <a href="{% url 'profile' %}?next={{ request.path }}">Профиль</a>
                                         <a href="{% url 'change_password' %}?next={{ request.path }}">Безопасность</a>
                                         <a href="{% url 'logout' %}?next={{ request.path }}">Выйти</a>
