--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -52,7 +52,7 @@
                 <li class="article_rec">
                     <a href="{% url 'article_detail' category=post.category  id=post.id %}">
                         <div class="article" style="background-image: url('{{post.photo.url}}');">
-                            <p class="name_article" >{{post.title}}</p>
+                            <p class="name_article" >{{post.title | truncatechars:70}}</p>
                         </div>
                     </a>
                 </li>
@@ -123,7 +123,7 @@
             <li class="credit_article" style="background-image: url('{{post.photo.url}}');">
                 <a href="{% url 'article_detail' category=post.category  id=post.id %}">
                     <div>
-                        <p>{{post.title}}</p>
+                        <p>{{post.title | truncatechars:70}}</p>
                     </div>
                 </a>
             </li>
@@ -179,7 +179,7 @@
             <li class="credit_article" style="background-image: url('{{post.photo.url}}');">
                 <a href="{% url 'article_detail' category=post.category  id=post.id %}">
                     <div>
-                        <p>{{post.title}}</p>
+                        <p>{{post.title | truncatechars:70}}</p>
                     </div>
                 </a>
             </li>
@@ -240,7 +240,7 @@
             <li class="credit_article" style="background-image: url('{{post.photo.url}}');">
                 <a href="{% url 'article_detail' category=post.category  id=post.id %}">
                     <div>
-                        <p>{{post.title}}</p>
+                        <p>{{post.title | truncatechars:70}}</p>
                     </div>
                 </a>
             </li>
