--- a/better_site/accounts/templates/accounts/change_password.html
+++ b/better_site/accounts/templates/accounts/change_password.html
@@ -9,7 +9,7 @@
         <i class="fa-solid fa-fingerprint user_logo"></i>
         <form class="change_password_form" method="POST" action="{% url 'change_password' %}">
             {% csrf_token %}
-            <p class="register_label">Безопасность&nbsp;&nbsp; <button type="button" class="pencil_button"><i class="fa-solid fa-pencil pencil"></i></button></p>
+            <p class="register_label">Изменить пароль&nbsp;&nbsp; <button type="button" class="pencil_button"><i class="fa-solid fa-pencil pencil"></i></button></p>
 
             <div class="form">
                 <div class="input old_password">
