--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -105,6 +105,11 @@
         {% endblock %}
     </main>
 
+    <a href="#">
+<!--        <i class="fa-solid fa-arrow-up arrow_up"></i>-->
+        <i class="fa-solid fa-chevron-up arrow_up"></i>
+    </a>
+
     <div class="footerContainer">
         <div class="media">
             <p>Follow us:</p>
