--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -49,6 +49,7 @@ body {
     background-color: var(--body-color);
     color: var(--text-color);
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 main {
@@ -597,6 +598,8 @@ nav {
 .credit ul li:hover p {
 /*    transform: scale(1.01);*/
     transform: translateY(35px);
+    box-shadow: 0px 41px 50px -28px rgba(140,31,75,1),
+    0px 25px 20px -20px rgba(0,0,0,0.45);
 }
 
 .credit ul li:first-child:hover {
@@ -642,6 +645,11 @@ nav {
 .credit_black p {
     background-color: rgba(140, 31, 75, 1);
     min-width: 100%;
+}
+
+.credit_black ul li:hover p {
+/*    transform: scale(1.01);*/
+    box-shadow: 0px 0px 0px 0px #131313;
 }
 
 
@@ -985,6 +993,11 @@ nav {
     row-gap: 3vh;
     column-gap: 2vh;
 /*    border-bottom: 2px solid #ff007d;*/
+}
+
+.article_info a {
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.4);
 }
 
 .article_info p {
@@ -1950,6 +1963,25 @@ input::placeholder {
     background-color: #ff007d;
     border-radius: 30px;
 
+}
+
+.arrow_up {
+    background-color: rgba(0, 0, 0, 0.5);
+/*    backdrop-filter: blur(80px);*/
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
+    position: fixed;
+    font-size: 2.5rem;
+    right: 6px;
+    bottom: 50px;
+    z-index: 100000;
+    transition: .3s;
+    transform: scale(0.95);
+}
+
+.arrow_up:hover {
+    transform: scale(1.05);
 }
 
 /* for medium devices */
