show/hide password on security, signup pages

--- a/better_site/accounts/templates/accounts/change_password.html
+++ b/better_site/accounts/templates/accounts/change_password.html
@@ -14,14 +14,17 @@
             <div class="form">
                 <div class="input old_password">
                     <div class="field">{{form.old_password}}</div>
+                    <i class="fa-solid fa-eye-slash eye-icon_1"></i>
                 </div>
 
                 <div class="input new_password1">
                     <div class="field">{{form.new_password1}}</div>
+                    <i class="fa-solid fa-eye-slash eye-icon_2"></i>
                 </div>
 
                 <div class="input new_password2">
                     <div class="field">{{form.new_password2}}</div>
+                    <i class="fa-solid fa-eye-slash eye-icon_3"></i>
                 </div>
 
 <!--                <div class="input password">-->
@@ -50,5 +53,47 @@
 
 
 <!--{{user}}-->
+
+<script>
+
+const Icon1 = document.querySelector('.eye-icon_1'),
+        Field1 = document.querySelector('.password_field_1');
+
+Icon1.addEventListener('click', () => {
+    if(Field1.type === "password") {
+        Field1.type = "text";
+        Icon1.classList.replace("fa-eye-slash", "fa-eye")}
+    else{
+        Field1.type = "password";
+        Icon1.classList.replace("fa-eye", "fa-eye-slash")
+    }
+})
+
+const Icon2 = document.querySelector('.eye-icon_2'),
+        Field2 = document.querySelector('.password_field_2');
+
+Icon2.addEventListener('click', () => {
+    if(Field2.type === "password") {
+        Field2.type = "text";
+        Icon2.classList.replace("fa-eye-slash", "fa-eye")}
+    else{
+        Field2.type = "password";
+        Icon2.classList.replace("fa-eye", "fa-eye-slash")
+    }
+})
+
+const Icon3 = document.querySelector('.eye-icon_3'),
+        Field3 = document.querySelector('.password_field_3');
+
+Icon3.addEventListener('click', () => {
+    if(Field3.type === "password") {
+        Field3.type = "text";
+        Icon3.classList.replace("fa-eye-slash", "fa-eye")}
+    else{
+        Field3.type = "password";
+        Icon3.classList.replace("fa-eye", "fa-eye-slash")
+    }
+})
+</script>
 
 {% endblock %}
