redirect after login agter wrong password

--- a/better_site/accounts/templates/accounts/change_password.html
+++ b/better_site/accounts/templates/accounts/change_password.html
@@ -40,6 +40,10 @@
 
     </div>
 
+<!--{%for message in messages%}-->
+<!--    {{message}}-->
+<!--{%endfor%}-->
+
 
 
 <!--        {% csrf_token %}-->
