error password change messages

--- a/better_site/accounts/templates/accounts/change_password.html
+++ b/better_site/accounts/templates/accounts/change_password.html
@@ -38,25 +38,15 @@
 
         </form>
 
+        <div class="password_change_message">
+            {% for message in messages %}
+            <p style="font-size: clamp(1rem, 0.8078rem + 0.6275vw, 1.2rem); color: red;" class="error_password_message"><i class="fa-solid fa-ban"></i>&nbsp;&nbsp;{{message}}</p>
+            {% endfor %}
+        </div>
+
     </div>
 
-<!--{%for message in messages%}-->
-<!--    {{message}}-->
-<!--{%endfor%}-->
 
-
-
-<!--        {% csrf_token %}-->
-<!--        {{form.as_p }}-->
-<!--        <button class="change_password_button" type="submit" >Изменить</button>-->
-
-<!--    </form>-->
-<!--    {% for message in messages %}-->
-<!--        <p style="color: #fc0013;">{{ message }}&nbsp;&nbsp;&nbsp;</p>-->
-<!--    {% endfor %}-->
-
-
-<!--{{user}}-->
 
 <script>
 
