--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -143,7 +143,7 @@
                     <p>Debit cards</p>
                 </li>
                 <li>
-                    <p style="color: #ff007d; opacity: 0.3;">Debit cards</p>
+                    <p style="color: #01a88b; opacity: 0.5;">Debit cards</p>
                 </li>
             </ul>
 
@@ -152,13 +152,13 @@
                     <p>Debit cards</p>
                 </li>
                 <li>
-                    <p style="color: #ff007d; opacity: 0.3;">Debit cards</p>
+                    <p style="color: #01a88b; opacity: 0.5;">Debit cards</p>
                 </li>
                 <li>
                     <p>Debit cards</p>
                 </li>
                 <li>
-                    <p style="color: #ff007d; opacity: 0.3;">Debit cards</p>
+                    <p style="color: #01a88b; opacity: 0.5;">Debit cards</p>
                 </li>
        </div>
     </div>
