--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -1662,9 +1662,18 @@ textarea:focus ~ .place_holder {
     font-size: 1.2rem;
     text-align: center;
     margin: 0;
-    padding: 5px;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 /*    background-color: red;*/
     width: 100%;
+}
+.profile i {
+    margin: 0;
+    padding: 0;
+/*    background-color: green;*/
+
 }
 
 .dropdown-content:hover i{
@@ -2232,16 +2241,17 @@ input::placeholder {
 
     .nav_menu {
         position: fixed;
-        bottom: 0;
+        bottom: 0px;
         left: 0;
-        background-color: var(--container-color);
+        background-color: rgba(255, 255, 255, 0.4);
+        backdrop-filter: blur(60px);
         box-shadow: 0 -1px 12px hsla(var(--hue), var(--sat), 15%, 0.15);
         width: 100%;
-        height: 4rem;
+        height: 5rem;
         padding: 0 1rem;
         display: grid;
         align-content: center;
-        border-radius: 1.25rem 1.25rem 0 0;
+        border-radius: 1.25rem 1.25rem;
         z-index: 1000;
     }
 
@@ -2252,6 +2262,11 @@ input::placeholder {
     .nav_link {
         opacity: 1;
         color: black;
+    }
+
+    .nav_item i{
+/*        background-color: red;*/
+        font-size: 2rem;
     }
 
     .nav_name {
@@ -2298,7 +2313,7 @@ input::placeholder {
     }
 
     .footerContainer {
-        padding-bottom: 4rem;
+        padding-bottom: 5rem;
     }
 
     .site_form {
@@ -2413,6 +2428,12 @@ input::placeholder {
     .update_profile_form_container button {
         font-size: clamp(1.15rem, 0.8137rem + 1.098vw, 1.5rem);
         bottom: 10px;
+    }
+
+
+    .arrow_up {
+        bottom: 70px;
+        font-size: 2rem;
     }
 
 }
