--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -232,13 +232,27 @@ nav {
     padding-bottom: 7%;
     font-size: 1.5rem;
     min-width: 50%;
-    background-color: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(17px);
+/*    background-color: rgba(255, 255, 255, 0.5);*/
+/*    background-color: rgba(140,31,75,0.3);*/
+/*    backdrop-filter: blur(17px);*/
     border-radius: 30px;
     transition: .4s;
     display: flex;
     flex-direction: column-reverse;
     position: relative;
+}
+
+.best_article h3::before {
+    content: '';
+    top: 0vh;
+    padding-right: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backdrop-filter: blur(17px);
+    -webkit-backdrop-filter: blur(17px);
+    border-radius: 1.25rem 1.25rem;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 
@@ -1263,7 +1277,7 @@ form input:focus::placeholder {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: rgba(0,0,0, 0.5)
+    color: rgba(0,0,0, 0.5);
 }
 
 .to_login p {
@@ -2259,6 +2273,17 @@ input::placeholder {
         z-index: 1000;
     }
 
+    .nav_menu::before {
+        content: '';
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        backdrop-filter: blur(60px);
+        -webkit-backdrop-filter: blur(60px);
+        border-radius: 1.25rem 1.25rem;
+        background-color: rgba(255, 255, 255, 0.4);
+    }
+
      .nav_list {
         justify-content: space-around;
     }
@@ -2322,7 +2347,7 @@ input::placeholder {
 
     .site_form {
         width: 430px;
-        height: 550px;
+        height: 530px;
     }
 
     .site_form_login{
@@ -2445,7 +2470,7 @@ input::placeholder {
 
     .form_wrapper {
         align-items: flex-start;
-        padding-top: 20vh;
+        padding-top: 12vh;
     }
 
     .search_form_container {
@@ -2846,6 +2871,10 @@ input::placeholder {
         left: 15vw;
 /*        background-color: red;*/
         margin-right: 15vw;
+    }
+
+    input {
+        height: 4v5;
     }
 
 }
